--- a/assets/scss/core.scss
+++ b/assets/scss/core.scss
@@ -1,4 +1,5 @@
 @use 'constants';
+@use 'themes';
 
 body {
   font-family: 'Lato', Verdana, sans-serif;
@@ -6,4 +7,6 @@ body {
 
   background-color: var(--color-background);
   color: var(--color-text);
+
+  @include themes.use-transitions(color, background-color);
 }
