--- a/assets/scss/themes.scss
+++ b/assets/scss/themes.scss
@@ -16,8 +16,12 @@
   --color-nav-spacer: #{colors.$nav-spacer--dark};
 }
 
-[data-theme-transitions-enabled='true'] * {
-  transition-property: background-color, color, border;
-  transition-duration: 0.2s;
-  transition-timing-function: ease-in-out;
+$theme-transition-duration: 0.2s;
+
+@mixin use-transitions($properties...) {
+  [data-theme-transitions-enabled='true'] & {
+    transition-property: $properties;
+    transition-duration: $theme-transition-duration;
+    transition-timing-function: ease-in-out;
+  }
 }
